--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.container {
+    display: grid;
+    grid-template-columns: 300px 300px 300px;
+}
+
+
 .zone {
     cursor:pointer;
     display:inline-block;
