--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .container {
     display: grid;
-    grid-template-columns: 300px 300px 300px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 20px;
+    grid-template-rows: 2fr 1fr 3fr; 
+    justify-items: start;
 }
 
 
