--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     justify-items: start;
 }
 
+.green {
+    grid-column: span 2;
+    grid-row: 1/3;
+    align-self: end;
+
+}
 
 .zone {
     cursor:pointer;
